# dio-python-com-tdd

./: README.md
tdd_project/: .env  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
tdd_project/store/: main.py
tdd_project/store/controllers/: product.py
tdd_project/store/core/: config.py  exceptions.py
tdd_project/store/schemas/: product.py
tdd_project/store/usecases/: product.py
tdd_project/tests/: factories.py
tdd_project/tests/controllers/: test_product.py
tdd_project/tests/usecases/: test_product.py
