[project]
name = "tdd-project"
version = "0.1.0"
description = ""
authors = [{ name = "dbengp", email = "dbengp@hotmail.com" }]
requires-python = "==3.13.5"
dependencies = [
  "fastapi (>=0.115.14)",
  "uvicorn (>=0.35.0)",
  "pydantic (>=2.11.7)",
  "pydantic-settings (>=2.10.1)",
  "pytest (>=8.4.1)",
  "pytest-asyncio (>=1.0.0)",
  "pre-commit (>=4.2.0)",
  "motor (>=3.7.1)",
  "httpx (>=0.28.1,<0.29.0)",
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
